fix menu bar icon jumpinp when pages change

--- a/src/stylesheets/_peerPage.scss
+++ b/src/stylesheets/_peerPage.scss
@@ -5,7 +5,7 @@ $subTextColor: #4b4f5d;
 $importantTextColor: #12486b;
 
 .peer-page{
-    // overflow: hidden;
+    overflow: hidden;
     color: $subTextColor;
     background-color: $backgroundColor;
     padding: 40px;
